# scrapezoopla

./: .gitignore  LICENSE  README.md  pyproject.toml
download/: get_data.py  sync_s3.py
src/scrapezoopla/: get.py  scrape.py
tests/: data_test.py  search_test.py
