[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "scrapezoopla"
version = "0.0.1"
dependencies = [
    "requests",
    'importlib-metadata; python_version<"3.8"',
]

[tool.setuptools.packages.find]
# All the following settings are optional:
where = ["src"]  # ["."] by default
include = ["scrapezoopla*"]  # ["*"] by default
exclude = ["scrapezoopla.tests*"]  # empty by default
namespaces = false  # true by default